clusters/oracle-cluster/core/oauth2-proxy/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: oauth2-proxy
  labels:
    name: oauth2-proxy
