clusters/oracle-cluster/core/oauth2-proxy/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: oauth2-proxy-ingress
    namespace: oauth2-proxy
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:9Rmm8hFaJsqL1ro8JCnG3+ZiZGPXkn5u,iv:ARUkVlIQMPpgpT/BTjZjuzLXnw6PHBZz3tfIBIyg6Xo=,tag:lfWVOyVGfNcwjGFxHr1XpQ==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:xzOswqHmwrhD4BzcQZxFkEJ0JPldFjZ/,iv:fbbIRB3ayVGfGeyQ6usAxTQh+l0LBafbygG3NOUPpWc=,tag:XvXafdvDhIiZkcRFG7m4SQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: oauth2-proxy-oauth2-proxy
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEUGtaTXVjeW4vMzRFeGg4
[...]
            EfFYUdDmPcBZz8KxJWyijUuOxBqsUMB8v1NjyZ7j/FndZwkkRYDzmg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-27T13:51:54Z"
    mac: ENC[AES256_GCM,data:BcfLtqxV+hdFc1iqQ5HE4C+fERDiFsPe3ED2FLwz7ErtOv1obhmNXuSGq4HGrl+QRU//CHGjZA3hDHWDtz3MDN7TBsossAT+6IcHrlMD6p7SZW2V9fqdFixR2eYRJSKQH10bk0HiTjVdQ2mEWC6myWfU146LyubxlRAkoWlLE8c=,iv:5uC65bLapR3lYORM2wI5nCLWvLYFBxi7PYqjchy9s/4=,tag:JchOEQdGrjVPr8qgJoGMcg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
